syntax = "proto3";

package smarthome.v1.common;

option go_package = "github.com/velvetriddles/mini-smart-home/proto/smarthome/v1/common;commonv1";

// Empty используется для методов без содержательного запроса или ответа
message Empty {}

// DeviceId представляет идентификатор устройства
message DeviceId {
  string id = 1;
} 